// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id          String    @id @default(uuid())
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  email       String    @unique
  password    String
  firstname   String?
  heroes       Hero[]
  votedHeroes VotesOnHeroes[]
  language    Language
}

model Hero{
  id          String    @id @default(uuid())
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  realName    String
  alterEgo    String
  image       String
  public      Boolean
  user        User?     @relation(fields: [userId], references: [id], onUpdate: Cascade, onDelete: Cascade)
  userId      String?   @default("")
  userVoted   VotesOnHeroes[]
}

enum Language {
  es
  en
  ru
}

model VotesOnHeroes {
  user        User?     @relation(fields: [userId], references: [id], onUpdate: Cascade, onDelete: Cascade)
  userId      String    @default("")
  heroes      Hero?     @relation(fields: [heroId], references: [id], onUpdate: Cascade, onDelete: Cascade)
  heroId      String    @default("")
  assignedAt  DateTime  @default(now()) @db.Timestamp(3)
  @@id([userId, heroId])
}