//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  heroes Hero [not null]
  votedHeroes VotesOnHeroes [not null]
  language Language [not null]
}

Table Hero {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  realName String [not null]
  alterEgo String [not null]
  image String [not null]
  public Boolean [not null]
  user User
  userId String [default: '']
  userVoted VotesOnHeroes [not null]
}

Table VotesOnHeroes {
  user User
  userId String [not null, default: '']
  heroes Hero
  heroId String [not null, default: '']
  assignedAt DateTime [default: `now()`, not null]

  indexes {
    (userId, heroId) [pk]
  }
}

Enum Language {
  es
  en
  ru
}

Ref: Hero.userId > User.id [delete: Cascade]

Ref: VotesOnHeroes.userId > User.id [delete: Cascade]

Ref: VotesOnHeroes.heroId > Hero.id [delete: Cascade]